--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "yarn jest"
+    "test": "yarn jest",
+    "hello": "tests"
   },
   "devDependencies": {
     "jest": "^25.2.3"
